# GalacticView

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  package.json  pyproject.toml
.github/workflows/: agent-backend-ci.yml  backend-ci.yml  blogpost-backend-ci.yml  core-backend-ci.yml  frontend-ci.yml
apps/agent-backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
apps/agent-backend/galacticview_bot/: agents.py
apps/agent-backend/galacticview_bot/edges/: router.py
apps/agent-backend/galacticview_bot/nodes/: formatter.py  reasoner.py  tool_node.py
apps/agent-backend/galacticview_bot/tools/: search.py
apps/agent-backend/server/: cors.py  dependencies.py  serve.py  service.py
apps/agent-backend/server/dto/: chat_type_out.py
apps/backend/galacticview_bot/: response_structure.py
apps/blogpost-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  ruff.toml
apps/blogpost-backend/app/: main.py
apps/blogpost-backend/app/api/: dependencies.py
apps/blogpost-backend/app/api/routes/: blogs.py
apps/blogpost-backend/app/core/: aws.py  s3_setup.py
apps/blogpost-backend/app/repositories/: blog_repo.py
apps/blogpost-backend/app/schema/: blog_schema.py
apps/blogpost-backend/app/scripts/: init_db.py
apps/blogpost-backend/app/services/: blog_service.py  storage_service.py
apps/core-backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  ruff.toml
apps/core-backend/app/: main.py
apps/core-backend/app/api/: dependencies.py
apps/core-backend/app/api/routes/: auth.py
apps/core-backend/app/core/: database.py
apps/core-backend/app/models/: user_model.py
apps/core-backend/app/repositories/: user_repo.py
apps/core-backend/app/schema/: user_schema.py
apps/core-backend/app/services/: auth_service.py
apps/frontend/: .dockerignore  .env.example  Dockerfile  nginx.conf  package.json  vite.config.ts
apps/frontend/public/locales/en/: translation.json
apps/frontend/src/: Root.tsx  main.tsx
apps/frontend/src/api/: agent.api.ts  auth.api.ts  blogposts.api.ts
apps/frontend/src/components/: AgentChatWidget.module.css  AgentChatWidget.tsx  NavigationBar.module.css  NavigationBar.tsx
apps/frontend/src/config/: firebase.ts
apps/frontend/src/context/: AuthContext.tsx
apps/frontend/src/hooks/: useAgentChat.ts
apps/frontend/src/pages/: BlogPostPageCreate.module.css  BlogPostPageCreate.tsx  BlogPostsPage.module.css  BlogPostsPage.tsx  LoginPage.tsx  LoginRegisterPage.module.css  RegisterPage.tsx
apps/frontend/src/query/: blogPosts.query.ts
apps/frontend/src/types/: BlogPostsType.ts  UserType.ts
apps/frontend/src/utils/: authUtils.ts
galacticview_bot/core/: graph.py  state.py
galacticview_bot/nodes/: model.py  reasoner.py
server/: service.py
src/components/: NavigationBar.tsx
